--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 objs/
-dist/README-SDL.txt
-dist/README-libpng.txt
-dist/game.ilk
-dist/game.pdb
-dist/SDL2.dll
-dist/game
-dist/game.exe
+dist/
 maek-cache.json
+.vscode/
